--- a/2.hello_keras.ipynb
+++ b/2.hello_keras.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "# Hello Keras\n",
-    "<a href=\"https://colab.research.google.com/github/tabris2015/deep-learning-with-tensorflow-ITEC/blob/master/.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://github.com/tabris2015/deep-learning-with-tensorflow-ITEC/blob/master/2.hello_keras.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
