--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -17,7 +17,8 @@
   {
    "cell_type": "code",
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import tensorflow as tf"
    ],
    "metadata": {
     "collapsed": false,
@@ -25,24 +26,38 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 3,
+   "execution_count": 1,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.19.2\n"
+      "1.18.5\n",
+      "2.2.0\n"
      ]
     }
    ],
    "source": [
-    "print(np.__version__)"
+    "print(np.__version__)\n",
+    "print(tf.__version__)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
